simple_language_plugin/src/main/java/org/intellij/sdk/language/Simple.bnf
// Copyright 2000-2022 JetBrains s.r.o. and other contributors. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
{
  parserClass="org.intellij.sdk.language.parser.SimpleParser"
  parserUtilClass="org.intellij.sdk.language.parser.SimpleParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Simple"
  psiImplClassSuffix="Impl"
  psiPackage="org.intellij.sdk.language.psi"
  psiImplPackage="org.intellij.sdk.language.psi.impl"

  elementTypeHolderClass="org.intellij.sdk.language.psi.SimpleTypes"
  elementTypeClass="org.intellij.sdk.language.psi.SimpleElementType"
  tokenTypeClass="org.intellij.sdk.language.psi.SimpleTokenType"

  psiImplUtilClass="org.intellij.sdk.language.psi.impl.SimplePsiImplUtil"

  tokens = [
    space='regexp:\s+'
  ]
}

simpleFile ::= newline? command_scope? (newline command_scope)* newline*

private command_scope ::= (command_scope_inline_fish_statement|function_define|comment_block|command_block)
command_scope_inline_fish_statement ::= command_scope_inline_fish_expression

function_define ::= function_define_header newline (fish_block newline)? end
private function_define_header ::= fish define identifier function_parameter_list?
private function_parameter_list ::= (left_parenthesis identifier (comma_operator identifier)* right_parenthesis)

fish_block ::=  fish_internal_block (newline fish_internal_block)*
private fish_internal_block ::= if_block | loop_block | case_block | comment_block | command_block | fish_statement

if_block ::= if expression then
             (newline fish_block)?
             (newline else_if_statement)*
             (newline else_statement)?
             newline endif
private else_if_statement ::= elseif expression then (newline fish_block)?
private else_statement ::=  else (newline fish_block)?

loop_block ::= loop (newline fish_block)? newline endloop

case_block ::= case_of expression case_clause* newline end_case
private case_clause ::= case expression (newline fish_block)?

command_block ::= command (newline command_body)* newline end_command
private any_in_command ::= (
    identifier | left_square_bracket | right_square_bracket | left_parenthesis | right_parenthesis | comma_operator |
    assignment_operator| newline |
    unary_operator | binary_operator| dot_operator|at_operator | literal | ellipsis | keywords_in_command_block
 )
private command_body ::= any_in_command+
private keywords_in_command_block ::= (fish | case_of | case | end_case | define | end | exit | global | if | then |
    elseif | else | endif | local | lock | loop | endloop | continue | return | section | end_section | struct  |)

fish_statement ::= (array_assignment_statement | function_call_statement  | var_declare_statement |  assignment_statement | expression)
//todo 需要区分单行语句与多行语句

function_call_statement ::= function_call_expression


assignment_statement ::= identifier assignment_right
array_assignment_statement ::= identifier parenthesis_csv_expression assignment_right
var_declare_statement ::= local_var_declare_statement | global_var_declare_statement
private local_var_declare_statement ::= local identifier (comma_operator identifier)* (assignment_operator expression)?
private global_var_declare_statement ::= global identifier (comma_operator identifier)* (assignment_operator expression)?
private assignment_right ::= assignment_operator expression


private expression ::= parenthesis_expression | function_call_expression | unary_expression |binary_expression | value
private parenthesis_expression ::= left_parenthesis expression right_parenthesis
private function_call_expression ::= identifier parenthesis_csv_expression
private csv_expression ::= expression (comma_operator expression)*
private parenthesis_csv_expression ::= left_parenthesis csv_expression right_parenthesis
private command_scope_inline_fish_expression ::= left_square_bracket fish_statement right_square_bracket

private binary_expression ::= value binary_operator expression
private unary_expression ::= unary_operator expression

////词汇之间的组合
private comment_block ::= end_of_line_comment
value ::= identifier | literal
literal ::= string_literal | number_literal



property ::= (identifier) {
//  pin=3
  recoverWhile="recover_property"
  mixin="org.intellij.sdk.language.psi.impl.SimpleNamedElementImpl"
  implements="org.intellij.sdk.language.psi.SimpleNamedElement"
  methods=[getKey getValue getName setName getNameIdentifier getPresentation]
}
private recover_property ::= !(identifier|end_of_line_comment)

//以下为读取的原始token
private string_literal ::=  STRING_LITERAL
private number_literal ::= NUMBER_LITERAL
private end_of_line_comment ::= COMMENT
private binary_operator ::= BINARY_OPERATOR | MINUS_OPERATOR
private unary_operator ::= UNARY_OPERATOR | MINUS_OPERATOR
private assignment_operator ::= ASSIGNMENT_OPERATOR
private newline ::= NEWLINE+

private at_operator ::= FUNCTION_CALL_OPERATOR
private comma_operator ::= COMMA_OPERATOR
private dot_operator ::= DOT_OPERATOR

// Bracket Operators
private left_parenthesis ::= LEFT_PARENTHESIS
private right_parenthesis ::= RIGHT_PARENTHESIS
private left_square_bracket ::= LEFT_SQUARE_BRACKET
private right_square_bracket ::= RIGHT_SQUARE_BRACKET
private left_curly_bracket ::= LEFT_CURLY_BRACKET
private right_curly_bracket ::= RIGHT_CURLY_BRACKET
private  identifier ::= IDENTIFIER

//keywords
private fish ::= FISH
private define ::= DEFINE
private end ::= END

private case_of ::= CASEOF
private case ::= CASE
private end_case ::= ENDCASE

private command ::= COMMAND
private end_command ::= ENDCOMMAND

private exit ::= EXIT
private ellipsis ::=  ELLIPSIS

private global ::= GLOBAL
private local ::= LOCAL

private if ::= IF
private then ::= THEN
private elseif ::= ELSEIF | (else if)
private else ::= ELSE
private endif ::= ENDIF

private lock ::= LOCK

private loop ::= LOOP
private endloop ::= ENDLOOP
private continue ::= CONTINUE

private return ::= RETURN

private section ::= SECTION
private end_section ::= ENDSECTION

private struct ::= STRUCT
